amelioration de l'ux css

--- a/templates/view_data.html
+++ b/templates/view_data.html
@@ -39,16 +39,16 @@
             align-items: flex-start;
             gap: 20px;
         }
-        /* .chart {
-            flex: 1;
-        } */
         .chart-left {
             width: 40%;
         }
         .chart-right {
             width: 60%;
         }
-        
+        .tooltip {
+            text-align: center;
+            font-size: 0.85em;
+        }
     </style>
 </head>
 <body>
