ajout version appli sur la page scan

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,6 +96,10 @@
                 </button>
                 <button type="reset" class="btn btn-secondary btn-reset">Réinitialiser</button>
             </div>
+                  <!-- Affichage de la version -->
+             <div class="text-center mt-3">
+                 <small class="text-muted">Version de l'application : {{ app_version }}</small>
+             </div>
         </form>
         <div id="loading">
             <div class="spinner-border text-primary" role="status">
