--- a/templates/view_data.html
+++ b/templates/view_data.html
@@ -70,6 +70,12 @@
                 </div>
             </div>
         </form>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h1>Graphiques et Statistiques</h1>
+            <!-- Bouton pour relancer un scan -->
+            <a href="http://127.0.0.1:8000/scan" class="btn btn-primary">Relancer un Scan</a>
+            <a href="http://127.0.0.1:8000/logout" class="btn btn-danger">Se Déconnecter</a>
+        </div>
 
         <!-- Section pour afficher les statistiques -->
         <h2>Statistiques Générales</h2>
