Btn CSV et PDF mis en place pour DL les données

--- a/templates/view_data.html
+++ b/templates/view_data.html
@@ -75,6 +75,9 @@
             <!-- Bouton pour relancer un scan -->
             <a href="http://127.0.0.1:8000/scan" class="btn btn-primary">Relancer un Scan</a>
             <a href="http://127.0.0.1:8000/logout" class="btn btn-danger">Se Déconnecter</a>
+            <!-- Boutons pour téléchargement PDF et CSV -->
+            <a href="/download-csv" class="btn btn-success">Télécharger CSV</a>
+            <a href="/download-pdf" class="btn btn-warning">Télécharger PDF</a>
         </div>
 
         <!-- Section pour afficher les statistiques -->
